tests/snapshot/error/source_locations/destructure/member/set_private_property.exp
Error: 
  ┌ source_locations/destructure/member/set_private_property.js:3:11
  |
3 |     throw new Error()
  |           ^
Stack trace:
  at set #foo (source_locations/destructure/member/set_private_property.js:3:11)
  at test (source_locations/destructure/member/set_private_property.js:7:15)
  at <global> (source_locations/destructure/member/set_private_property.js:12:1)